Fixed play text wrapping on mobile for video component

--- a/src/patterns/video/Video.scss
+++ b/src/patterns/video/Video.scss
@@ -76,6 +76,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     transition: color 0.3s;
+    white-space: nowrap;
     z-index: 20;
 
     &:hover {
